<resources>
    <string name="app_name">Portfolio App</string>


    <!-- Simple text Strings -->


    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </string>
    <string name="job_name">Software Engineer</string>
    <string name="lorem_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</string>
    <string name="full_name">Lien Hiep Quoc</string>
    <string name="work_exp">Work Experience</string>
    <string name="diploma">Computer Science Diploma</string>
    <string name="career_objective">Motivated Software Engineering senior student at the University of Information Technology. Passionate about solving problems, developing and launching new projects. Seeking beginner opportunities to enhance my knowledge, nurture my proactive mindset, and thrive in the field.</string>
    <string name="hard_skills">
        • <b>Languages &amp; Scripting:</b>\nDart, JavaScript, HTML, CSS, C++, C#, Java\n
        • <b>Frameworks &amp; Libraries:</b> \nReactjs, Redux, Vuejs, Flutter, DirectX9, Android, React Native\n
        • <b>Operating Systems:</b>\nWindows and Linux\n
        • <b>Databases:</b>\nMS SQL, MySQL, SQLite\n
        • <b>Analysis and Design Tools:</b>\ndiagrams.net (draw.io)\n
        • <b>Methodologies:</b>\nAgile, Scrum, Waterfall\n
        • <b>Other technologies and skills:</b>\nGit, npm, UX/UI
    </string>
    <string name="soft_skills_section">Soft Skills</string>
    <string name="soft_skills">
        • Teamwork and collaboration\n
        • Problem solving\n
        • Critical thinking\n
        • Adaptability\n
        • Empathy\n
        • Creativity\n
        • English\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skills_section">Skills</string>
    <string name="hard_skills_section">Hard Skills</string>
    <string name="professional_experience">Professional Experience</string>
    <string name="company_and_duration_0">Real-Time Analytics (RTA)  | Sep 2019 - Feb 2020</string>
    <string name="job_title_0">Front-end Web Software Developer intern</string>
    <string name="company_and_duration_next">An Awesome Company | Present</string>
    <string name="work_description_next">
        <b>Expectation:</b>\n
        • Working on challenging, interesting product which is being used worldwide\n
        • Be involved in the complete project lifecycle, from requirements to final delivery\n
        • Enhance knowledge, develop new skills and have fun\n
    </string>
    <string name="work_description_0">
        <b>Key Responsibility</b>\n
        • Supported RTA web application development, testing and maintenance.\n
        • Collaborated on RTA main products.\n
        • Managed and refined an incubation form-builder project.\n
        • Verified that software met requirements.\n
        <b>Key Achievement</b>\n
        • Redesigned the UI of the form-builder project.\n
        • Identified and fixed a bug which prevent the importing of exported data.
    </string>
    <string name="education">Education</string>
    <string name="university">University of Information Technology - VNU HCM</string>
    <string name="major_and_duration">BE Software Engineering | Aug 2017 - Present</string>
    <string name="education_description">
        Expected Graduation Date: Aug 2021
    </string>
    <string name="gpa_title">GPA</string>
    <string name="gpa_description">7.84/10 (updating)</string>
    <string name="highest_ranking_title">Highest Ranking</string>
    <string name="highest_ranking_description">Top 3 Software Engineering class of 2017 (High Quality program)</string>
    <string name="thesis_title">Thesis</string>
    <string name="thesis_description">Thesis involves researching new technologies (Machine Learning, Data Science, …) and applying them to make a completed system (Product Recommender System).</string>
    <string name="leadership_and_experiment_title">Leadership and Experiment</string>
    <string name="leadership_and_experiment_description">Led several projects, tried adopting Scrum to manage recent game development project.</string>
    <string name="additional_activities_title">Additional Activities</string>
    <string name="additional_activities_description">
        • Member of Content Department at UIT\'s Open English Club\n
        • Member of Board of Directors at UIT\'s Table Tennis Club.\n
        • Collaborator of Content and Learning Department at UEH\'s CFE.\n
        • Active MOOCs learner.
    </string>
    <string name="project_image_description">Project Image</string>
    <string name="project_section_description">
        As a Software Engineering student, I\'ve done a wide range of projects on different platforms.\n
        Below are some <i>important projects</i> that I don\'t want you to miss.
    </string>
    <string name="project_title_0">castlevania10d</string>
    <string name="project_description_0">
        <b>Description:</b> Castlevania game development project. Using DirectX SDK, we built the first level of the game from scratch. We also tried managing this project using Scrum board on Trello.\nCollege project | Nov 2020 - Jan 2021\n
        <b>My responsibilities:</b>\n
        • Define Stories, prioritize and manage backlog.\n
        • Develop fundamental features, assist others in testing and fixing bugs.\n
        • Host Scrum events.\n
        <b>Technologies used:</b> DirectX, C++\n
    </string>
    <string name="project_title_1">ooda-frontend</string>
    <string name="project_description_1">
        <b>Description:</b> A web application that facilitates Human Resource management. This project is the user-facing part, with communication to the back-end for data, authentication, …\nCollege project | Oct 2019 - Dec 2019\n
        <b>My responsibilities:</b>\n
        • Support requirements gathering and planning.\n
        • Develop UI.\n
        • Handle and display data from back-end.\n
        <b>Technologies used:</b> React, Material UI kit, Axios, React-router\n
    </string>
    <string name="project_title_2">Lories</string>
    <string name="project_description_2">
        <b>Description:</b> A mobile application that serves as a hub for people in a relationship with lots of potential features to be developed. It tracks your day-in-love, upcoming events, and stores memories of your love.\nCollege project | Oct 2020 - Jan 2021\n
        <b>My responsibilities:</b>\n
        • Assist planning and designing wireframe.\n
        • Develop UI based on design.\n
        • Implement BloC and SQFlite to handle data communication.\n
        <b>Technologies used:</b> Flutter, BloC, SQFlite\n
    </string>
    <string name="project_title_3">Cinemaphile</string>
    <string name="project_description_3">
        <b>Description:</b> My first Android project. This is a movie application that allows people to search and read about movie plot, review points, cast, genre, … provided by two big movie databases.\nCollege project | Oct 2020 - Jan 2021\n
        <b>My responsibilities:</b>\n
        • Research API sources and acquire api keys.\n
        • Decide what will be shown and develop layout.\n
        • Handle and show data and image.\n
        <b>Technologies used:</b> Java, Android Studio\n
    </string>


</resources>
